--- a/LaSII/LaSII.csproj
+++ b/LaSII/LaSII.csproj
@@ -127,7 +127,9 @@
     <Compile Include="Assets\Demigiant\DOTween\Examples\Sequences.cs" />
     <Compile Include="Assets\MyScripts\CameraMove.cs" />
     <Compile Include="Assets\MyScripts\Combine.cs" />
+    <Compile Include="Assets\MyScripts\Darkness.cs" />
     <Compile Include="Assets\MyScripts\GameCtrl.cs" />
+    <Compile Include="Assets\MyScripts\Lightings.cs" />
     <Compile Include="Assets\MyScripts\LP_Skill.cs" />
     <Compile Include="Assets\MyScripts\LPlayer.cs" />
     <Compile Include="Assets\MyScripts\SPlayer.cs" />
