--- a/LaSII/Assembly-CSharp.csproj
+++ b/LaSII/Assembly-CSharp.csproj
@@ -85,7 +85,9 @@
      <Compile Include="Assets\Demigiant\DOTween\Examples\Sequences.cs" />
      <Compile Include="Assets\MyScripts\CameraMove.cs" />
      <Compile Include="Assets\MyScripts\Combine.cs" />
+     <Compile Include="Assets\MyScripts\Darkness.cs" />
      <Compile Include="Assets\MyScripts\GameCtrl.cs" />
+     <Compile Include="Assets\MyScripts\Lightings.cs" />
      <Compile Include="Assets\MyScripts\LP_Skill.cs" />
      <Compile Include="Assets\MyScripts\LPlayer.cs" />
      <Compile Include="Assets\MyScripts\SPlayer.cs" />
@@ -99,6 +101,7 @@
      <None Include="Assets\Demigiant\DOTween\DOTween50.xml" />
      <None Include="Assets\2DDL\2DLight\Shaders\OffsetShader.shader" />
      <None Include="Assets\2DDL\2DLight\Shaders\DefaultTexturizedAdditive.shader" />
+     <None Include="Assets\MyShader\Additive Intensify.shader" />
      <None Include="Assets\Demigiant\DOTween\DOTween43.xml" />
      <None Include="Assets\Demigiant\DOTween\DOTween46.xml" />
      <None Include="Assets\2DDL\2DLight\Shaders\DefaultTexturizedWithAlpha.shader" />
