--- a/LaSII/LaSII.csproj
+++ b/LaSII/LaSII.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Assets\MyScripts\LP_Skill.cs" />
     <Compile Include="Assets\MyScripts\LPlayer.cs" />
     <Compile Include="Assets\MyScripts\SPlayer.cs" />
+    <Compile Include="Assets\MyScripts\Wind.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\2DDL\2DLight\Shaders\CGTexturizing.shader" />
@@ -154,6 +155,7 @@
     <None Include="Assets\Demigiant\DOTween\DOTween50.xml" />
     <None Include="Assets\Demigiant\DOTween\Editor\DOTweenEditor.XML" />
     <None Include="Assets\Demigiant\DOTween\readme.txt" />
+    <None Include="Assets\MyShader\Additive Intensify.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
