--- a/LaSII/Assembly-CSharp.csproj
+++ b/LaSII/Assembly-CSharp.csproj
@@ -83,14 +83,19 @@
      <Compile Include="Assets\2DDL\Add-ons\Source.cs" />
      <Compile Include="Assets\Demigiant\DOTween\Examples\Basics.cs" />
      <Compile Include="Assets\Demigiant\DOTween\Examples\Sequences.cs" />
+     <Compile Include="Assets\MyScripts\CameraCtrl.cs" />
      <Compile Include="Assets\MyScripts\CameraMove.cs" />
      <Compile Include="Assets\MyScripts\Combine.cs" />
      <Compile Include="Assets\MyScripts\Darkness.cs" />
+     <Compile Include="Assets\MyScripts\DestroySelf.cs" />
+     <Compile Include="Assets\MyScripts\Down.cs" />
      <Compile Include="Assets\MyScripts\GameCtrl.cs" />
+     <Compile Include="Assets\MyScripts\Item_Energy.cs" />
      <Compile Include="Assets\MyScripts\Lightings.cs" />
      <Compile Include="Assets\MyScripts\LP_Skill.cs" />
      <Compile Include="Assets\MyScripts\LPlayer.cs" />
      <Compile Include="Assets\MyScripts\SPlayer.cs" />
+     <Compile Include="Assets\MyScripts\Wind.cs" />
      <None Include="Assets\Demigiant\DOTween\readme.txt" />
      <None Include="Assets\2DDL\2DLight\Shaders\StencilObject.shader" />
      <None Include="Assets\2DDL\2DLight\Shaders\DefaultTexturized.shader" />
