--- a/LaSend/LaSend.Plugins.csproj
+++ b/LaSend/LaSend.Plugins.csproj
@@ -288,6 +288,7 @@
     <None Include="Assets\Game Jam Template\Fonts\OpenSans\License!.txt" />
     <None Include="Assets\Game Jam Template\GameJamTemplateReadMe.txt" />
     <None Include="Assets\Game Jam Template\README.txt" />
+    <None Include="Assets\LaSData.Xml" />
     <None Include="Assets\Tilemap\Brushes\Tint Brush Smooth\Shaders\TintedTilemap.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
